# EveApps

./: .gitignore  CMakeLists.txt  EveApps_Emulator.sln  EveApps_MSVC.sln  LICENSE.md  README.md
DemoApps/MediaPlayer/: CMakeLists.txt  Readme.txt
DemoApps/MediaPlayer/Hdr/: App.h  DemoMediaPlayer.h
DemoApps/MediaPlayer/Project/Msvc/: DemoMediaPlayer_MSVC.sln  DemoMediaPlayer_Msvc.vcxproj  DemoMediaPlayer_Msvc.vcxproj.filters
DemoApps/MediaPlayer/Project/Msvc_Emulator/: DemoMediaPlayer_Emulator.sln  DemoMediaPlayer_Emulator.vcxproj  DemoMediaPlayer_Emulator.vcxproj.filters
DemoApps/MediaPlayer/Src/: App.c  DemoMediaPlayer.c
DemoApps/MediaPlayer/Test/Sdcard/: media.db
DemoApps/MediaPlayer/libs/AviPlayer/: FT_AVIParser.c  FT_AVIParser.h  FT_App_PlayVideo.c  FT_App_PlayVideo.h  FT_Audio.c  FT_Audio.h  FT_Buffer.c  FT_Buffer.h  FT_MQueue.c  FT_MQueue.h  FT_Util.c  FT_Util.h  bmp.h  container_avi.h
DemoApps/MediaPlayer/libs/Heap/: heap_4.c  heap_4.h
DemoApps/MediaPlayer/libs/MediaPlayer/: MediaExplorer.c
SampleApp/: CMakeLists.txt  Readme.txt  SampleApp_Emulator.sln  SampleApp_MSVC.sln  sonar-project.properties
SampleApp/Animation/: Readme.txt
SampleApp/Animation/Hdr/: Animation.h
SampleApp/Animation/Project/Msvc/: Animation_MSVC.sln  Animation_Msvc.vcxproj  Animation_Msvc.vcxproj.filters
SampleApp/Animation/Project/Msvc_Emulator/: Animation_Emulator.sln  Animation_Emulator.vcxproj  Animation_Emulator.vcxproj.filters
SampleApp/Animation/Src/: Animation.c
SampleApp/Animation/Test/Flash/: BT81X_Flash.edf  BT81X_Flash.map
SampleApp/Bitmap/: Readme.txt
SampleApp/Bitmap/Hdr/: Bitmap.h
SampleApp/Bitmap/Project/Msvc/: Bitmap_MSVC.sln  Bitmap_Msvc.vcxproj  Bitmap_Msvc.vcxproj.filters
SampleApp/Bitmap/Project/Msvc_Emulator/: Bitmap_Emulator.sln  Bitmap_Emulator.vcxproj  Bitmap_Emulator.vcxproj.filters
SampleApp/Bitmap/Src/: Bitmap.c
SampleApp/Bitmap/Test/: ASTC_layout_cell_1_3x2_casei_36x240_ASTC_12x10_KHR.raw  Background_index.raw  Background_lut.raw  Tomato_index.raw  Tomato_lut.raw  bird_320x240_L2.raw  bird_320x240_b0.raw  bird_320x240_b1.raw  bird_320x240_c0.raw  bird_320x240_c1.raw  bird_320x240_index.raw  bird_320x240_lut.raw  cell_100x672_COMPRESSED_RGBA_ASTC_4x4_KHR.raw  flower_800x480_800x480_RGB565.raw  lenaface_COMPRESSED_RGBA_ASTC_4x4_KHR.raw  numbers_astc12x10.raw
SampleApp/Flash/: CMakeLists.txt  Readme.txt
SampleApp/Flash/Hdr/: Flash.h
SampleApp/Flash/Project/Msvc/: Flash_MSVC.sln  Flash_Msvc.vcxproj  Flash_Msvc.vcxproj.filters
SampleApp/Flash/Project/Msvc_Emulator/: Flash_Emulator.sln  Flash_Emulator.vcxproj  Flash_Emulator.vcxproj.filters
SampleApp/Flash/Src/: Flash.c
SampleApp/Font/: Readme.txt
SampleApp/Font/Hdr/: Font.h
SampleApp/Font/Project/Msvc/: Font_MSVC.sln  Font_Msvc.vcxproj  Font_Msvc.vcxproj.filters
SampleApp/Font/Project/Msvc_Emulator/: Font_Emulator.sln  Font_Emulator.vcxproj  Font_Emulator.vcxproj.filters
SampleApp/Font/Src/: Font.c
SampleApp/Font/Test/Flash/: BT81X_Flash.edf  BT81X_Flash.map
SampleApp/Power/: Readme.txt
SampleApp/Power/Hdr/: Power.h
SampleApp/Power/Project/Msvc/: Power_MSVC.sln  Power_Msvc.vcxproj  Power_Msvc.vcxproj.filters
SampleApp/Power/Project/Msvc_Emulator/: Power_Emulator.sln  Power_Emulator.vcxproj  Power_Emulator.vcxproj.filters
SampleApp/Power/Src/: Power.c
SampleApp/Primitives/: Readme.txt
SampleApp/Primitives/Hdr/: Primitives.h
SampleApp/Primitives/Project/Msvc/: Primitives_MSVC.sln  Primitives_Msvc.vcxproj  Primitives_Msvc.vcxproj.filters
SampleApp/Primitives/Project/Msvc_Emulator/: Primitives_Emulator.sln  Primitives_Emulator.vcxproj  Primitives_Emulator.vcxproj.filters
SampleApp/Primitives/Src/: Primitives.c
SampleApp/Primitives/Test/: background_paletted.raw  background_paletted_lut.raw  lenaface40_index.raw  lenaface40_lut.raw
SampleApp/Sound/: Readme.txt
SampleApp/Sound/Hdr/: Sound.h
SampleApp/Sound/Project/Msvc/: Sound_MSVC.sln  Sound_Msvc.vcxproj  Sound_Msvc.vcxproj.filters
SampleApp/Sound/Project/Msvc_Emulator/: Sound_Emulator.sln  Sound_Emulator.vcxproj  Sound_Emulator.vcxproj.filters
SampleApp/Sound/Src/: Sound.c
SampleApp/Sound/Test/: Devil_Ride_30_11025hz.raw
SampleApp/Touch/: Readme.txt
SampleApp/Touch/Hdr/: Touch.h
SampleApp/Touch/Project/Msvc/: Touch_MSVC.sln  Touch_Msvc.vcxproj  Touch_Msvc.vcxproj.filters
SampleApp/Touch/Project/Msvc_Emulator/: Touch_Emulator.sln  Touch_Emulator.vcxproj  Touch_Emulator.vcxproj.filters
SampleApp/Touch/Src/: Touch.c
SampleApp/Utility/: Readme.txt
SampleApp/Utility/Hdr/: Utility.h
SampleApp/Utility/Project/Msvc/: Utility_MSVC.sln  Utility_Msvc.vcxproj  Utility_Msvc.vcxproj.filters
SampleApp/Utility/Project/Msvc_Emulator/: Utility_Emulator.sln  Utility_Emulator.vcxproj  Utility_Emulator.vcxproj.filters
SampleApp/Utility/Src/: Utility.c
SampleApp/Video/: Readme.txt
SampleApp/Video/Hdr/: Video.h
SampleApp/Video/Project/Msvc/: Video_MSVC.sln  Video_Msvc.vcxproj  Video_Msvc.vcxproj.filters
SampleApp/Video/Project/Msvc_Emulator/: Video_Emulator.sln  Video_Emulator.vcxproj  Video_Emulator.vcxproj.filters
SampleApp/Video/Src/: Video.c
SampleApp/Video/Test/: Logo_480x272_480x272_COMPRESSED_RGBA_ASTC_4x4_KHR.raw
SampleApp/Video/Test/Flash/: BT81X_Flash.edf  (+1 more)
SampleApp/Widget/: Readme.txt
SampleApp/Widget/Hdr/: Widget.h
SampleApp/Widget/Src/: Widget.c
(+2957 files in other folders)
